# device-utils

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_templates/autosummary/: class.rst
docs/source/first_steps/: installation.rst  quickstart.rst
docs/source/package/: zhinst.deviceutils.rst
src/zhinst/deviceutils/: __init__.py  shfqa.py  shfqc.py  shfsg.py
tests/: test_shfqc_consistency.py
