[metadata]
name = zhinst-deviceutils
author = Zurich Instrument
author_email = info@zhinst.com
description = Zurich Instruments utils for device control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zhinst/zhinst-device-utils
project_urls =
    Bug Tracker = https://github.com/zhinst/zhinst-device-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.5
install_requires =
    zhinst >= 21.08
    numpy >=1.14
use_scm_version= True

[options.packages.find]
where = src
include = zhinst.*
